--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.15.1"
+    "mysql2": "^3.15.1",
+    "pg": "^8.16.3"
   }
 }
